2006-04-09  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/*: backport doc changes from 2.9.

2006-04-06  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/lilypond-book.py
	(Lilypond_snippet.output_print_filename): backport href fix

	* scm/backend-library.scm (search-gs): backport gs searching fix.

2006-04-06  Werner Lemberg  <wl@gnu.org>

	* ly/engraver-init.ly (\Score): Add beam-event to quotedEventTypes
	(bugfix backport).

2006-04-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/musicxml2ly.py (bindir): gub relocation. (bugfix backport.)

	* scm/music-functions.scm (toplevel-music-functions): set
	ly:quote-iterator::constructor from
	toplevel-music-functions. (bugfix backport for mutual quotes.)

2006-03-31  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ advanced-notation, changing-defaults,
	instrument-notation, invoking, music-glossary: backport doc.

2006-03-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/bibliography/GNUmakefile ($(outdir)/%.html): set
	BSTINPUTS
	($(outdir)/%.html): backport of fix.

	* VERSION: release 2.8.1

	* lily/pango-font.cc (pango_item_string_stencil): update from 2.9.x

2006-03-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/ttf.cc (print_trailer): only print existing glyphs. 

2006-03-30  Joe Neeman  <joeneeman@gmail.com>

	* lily/stem-tremolo.cc (print): for whole notes (and breves, etc.)
	position the tremolo based on the position of the notehead.

	* input/regression/stem-tremolo.ly: add example of unbeamed eighth
	notes and update the texidoc line with the new positioning rules.

2006-03-30  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/ttf.cc (print_trailer): oops. Backport brown paper bag bugfix.

2006-03-29  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* backports:

	* input/regression/stem-tremolo-position.ly: new file.

	* lily/stem-tremolo.cc: remove Stem_tremolo::dim_callback

2006-03-28  Joe Neeman  <joeneeman@gmail.com>
