@@ -343,9 +343,11 @@ with other voices is preserved.
 
 
 @example
-@@lilypond[fragment,verbatim,center]
-r1 r1*3 R1*3 \\\\property Score.skipBars= ##t r1*3 R1*3
-@@end lilypond
+@{
+r1 r1*3 R1*3
+\\set Score.skipBars= ##t
+r1*3 R1*3
+@}
 @end example
 ")
      (skipTypesetting ,boolean?
@@ -414,12 +416,10 @@ Normally a tuplet bracket is as wide as the
 property, you can make brackets last shorter.  Example
 
 @example
-@@lilypond[verbatim,fragment]
-context Voice \\times 2/3 @{
-  property Voice.tupletSpannerDuration = #(ly:make-moment 1 4)
-  c-[8 c c-] c-[ c c-]
+@{
+\\set tupletSpannerDuration = #(ly:make-moment 1 4)
+\\times 2/3 @{ c8 c c c c c @}
 @}
-@@end lilypond
 @end example
 .")
 
